# wazuh-virtual-machines

./: .coverage  .gitignore  .test-5538  CHANGELOG.md  README.md  SECURITY.md  VERSION.json  completo.py  main.py  pyproject.toml  result-4.md  result-ami-8.md  result-ami-9.md  result.md  result.txt  result3.md  test_report_20260119_133018.md
.github/scripts/: generate_presigned_dev_urls.py
.github/scripts/ova/: wazuh_ovf_template
.github/workflows/: 4_AMI_builder.yaml  4_AMI_builder.yaml.yaml  4_OVA_builder.yaml  4_builder_OVA.yaml  4_bumper_repository.yml  4_packages_builder_ami.yaml  5_AMI_builder.yaml  5_OVA_builder.yaml  5_builder_OVA.yaml  5_bumper_repository.yml  5_check_integration_ami.yaml  5_check_integration_ova.yaml  5_check_unit_test.yaml  5_packages_builder_ami.yaml  5_test-vm.yaml  builder_AMI.yaml  builder_OVA.yaml  check_integration_ami.yaml  check_integration_ova.yaml  check_unit_test.yaml  ova_old.py  packages_builder_ami.yaml  pr_check_ami.yaml  pr_check_ova.yaml  pr_check_tests.yaml  test-VM.yaml  test-ami.yaml  test-ami.yml  test-ova.yaml  test-vm.yaml
.github/workflows/ansible_playbooks/: ova_generator.yaml  ova_user_configuration.yaml
ami/: 40-wazuh-banner  wazuh-ami-customizer.service  wazuh-ami-customizer.sh  wazuh-ami-customizer.timer  wazuh-customizer.sh
ami/playbooks/: build_ami_packages.yaml
configurer/ami/: __init__.py  main.py
configurer/ami/ami_post_configurer/: __init__.py  ami_post_configurer.py  ami_post_customize.py  create_service_directory.py  custom_certificates.py  wazuh-ami-customizer.py
configurer/ami/ami_post_configurer/scripts/: wazuh-ami-certs-customizer.sh  wazuh-ami-customizer.service
configurer/ami/ami_post_configurer/templates/: ami_custom_service_directory.j2
configurer/ami/ami_pre_configurer/: __init__.py  ami_customize.py  ami_pre_configurer.py
configurer/ami/ami_pre_configurer/utils/: __init__.py  (+1 more)
configurer/core/: __init__.py  core_configurer.py  main.py
configurer/core/models/: __init__.py  certificates_manager.py  wazuh_components_config_manager.py  wazuh_config_mapping.py
configurer/core/static/: configuration_mappings.yaml
configurer/core/utils/: __init__.py  enums.py
configurer/ova/ova_post_configurer/: __init__.py  ova_post_configurer.py
configurer/ova/ova_pre_configurer/: __init__.py  generate_base_box.py  install_dependencies.py  ova_pre_configurer.py  setup.py
configurer/utils/: __init__.py  helpers.py
docs/: INSTALLATION.md  README.md  SUMMARY.md  book.toml
docs/book/: 404.html  index.html  print.html  searchindex.js  toc.html  toc.js
docs/book/dev/: clean-code.html  index.html  setup.html
docs/book/ref/: upgrade.html
docs/dev/: README.md  clean-code.md  setup.md
docs/dev/ami/: README.md
docs/dev/checks/: PR_CHECKS.md
docs/dev/generate-artifact/: generate-artifact.md
docs/dev/ova/: README.md  ova-run-tests.md
docs/dev/run-tests/: run-tests.md
docs/ref/: upgrade.md
docs/ref/ami/: configuration.md  installation.md  security.md  upgrade.md
docs/ref/configuration/: configuration.md
docs/ref/getting-started/: introduction.md
docs/ref/installation/: installation.md
docs/ref/integration_test/: ami_integration_tests.md  ova_integration_tests.md
docs/ref/modules/: modules.md
docs/ref/security/: security.md
generic/: __init__.py  helpers.py  remote_connection.py
models/: inventory.py
ova/: .gitignore  Vagrantfile  generate_ova.sh  ova_configurer_caller.sh  provision.sh  setOVADefault.sh  wazuh_ovf_template
ova/assets/: postProvision.sh  steps.sh
ova/assets/custom/: enable_fips.sh  functions.sh  messages.sh  removeVagrant.service
ova/workflow_assets/: Vagrantfile  generate_base_box.sh  ova_configurer.py  setup.sh
provisioner/: __init__.py  main.py  provisioner.py
provisioner/models/: __init__.py  certs_info.py  component_info.py  components_dependencies.py  input.py  inventory.py  package_info.py  password_tool_info.py  passwords_tool_info.py
provisioner/models/utils/: __init__.py  file_formatter.py  helpers.py
provisioner/static/: wazuh_dependencies.yaml
provisioner/utils/: __init__.py  enums.py
tests/: conftest.py  test_main.py
tests/provisioner/: test_main.py  test_provisioner.py  test_provisioner_main.py
tests/provisioner/models/: test_certs_info.py  test_components_dependencies.py  test_input.py  test_inventory.py  test_package_info.py
tests/test_configurer/test_ami/: conftest.py  test_main.py
tests/test_configurer/test_core/: test_core_configurer.py  test_main.py
tests/test_configurer/test_utils/: test_helpers.py
tests/test_generic/: test_helpers.py  test_remote_connection.py
tests/test_models/: test_inventory.py
tests/test_provisioner/: test_main.py  test_provisioner.py
tests/test_provisioner/test_models/: test_certs_info.py  test_components_dependencies.py  test_input.py  test_package_info.py
tests/test_utils/: test_logger.py
tools/: repository_bumper.sh
utils/: __init__.py  enums.py  logger.py
utils/scripts/: automatic_set_ram.sh
utils/scripts/ova_build/: wazuh_ovf_template
wazuh_local_ova/: Vagrantfile  __main__.py  build_ova.py  enums.py  helpers.py
wazuh_local_ova/templates/: Vagrantfile.j2
wazuh_vm_tester/: README.md  pyproject.toml  requirements.txt
wazuh_vm_tester/src/vm_tester/: __init__.py  cli.py  config.py  conftest.py
wazuh_vm_tester/src/vm_tester/aws/: __init__.py  credentials.py  ec2.py
wazuh_vm_tester/src/vm_tester/connections/: ansible.py  base.py  factory.py  local.py  pytest_connector.py  ssh.py
wazuh_vm_tester/src/vm_tester/instances/: __init__.py  base.py  ec2_instance.py  factory.py  local_instance.py
wazuh_vm_tester/src/vm_tester/reporting/: __init__.py  base.py  collectors.py  formatters.py  manager.py
wazuh_vm_tester/src/vm_tester/strategies/: __init__.py  ami.py  ansible.py  base.py  factory.py  local.py  ova.py  ssh.py
wazuh_vm_tester/src/vm_tester/tests/: __init__.py  test_certificates.py  test_connectivity.py  test_logs.py  test_ova.py  test_services.py  test_version.py
wazuh_vm_tester/src/vm_tester/utils/: __init__.py  inventory.py  logger.py  utils.py
(+92 files in other folders)
