[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wazuh-vm-tester"
version = "0.3.0"
authors = [
    {name = "Wazuh Engineering", email = "engineering@wazuh.com"},
]
description = "Tool for validating Wazuh virtual machines and AMIs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
]
dependencies = [
    "boto3>=1.26.0",
    "paramiko>=2.12.0",
    "pytest>=7.3.1",
    "pydantic>=1.10.0,<2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.2.0",
    "pytest>=7.3.1",
]

[project.scripts]
wazuh-vm-test = "vm_tester.cli:main"

[project.urls]
"Homepage" = "https://github.com/wazuh/wazuh-virtual-machines"
"Bug Tracker" = "https://github.com/wazuh/wazuh-virtual-machines/issues"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.hatch.build.targets.wheel]
packages = ["src/vm_tester"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "services: tests for Wazuh services",
    "certificates: tests for Wazuh certificates",
    "logs: tests for Wazuh logs",
    "connectivity: tests for Wazuh connectivity",
    "version: tests for Wazuh version",
]
